--- a/srivani/index.html
+++ b/srivani/index.html
@@ -35,10 +35,6 @@
             <span class="icon"><i class="fa fa-envelope-o" area-hidden="true"></i></span>
             <span class="text">srivani.chandrasekar@outlook.com</span>
           </li>
-          <!-- <li>
-            <span class="icon"><i class="fa fa-globe" area-hidden="true"></i></span>
-            <span class="text">www.mywebsite.com/</span>
-          </li> -->
           <li>
             <a href="https://www.linkedin.com/in/srivani-c-70054558/" target="_blank">
               <span class="icon"><i class="fa fa-linkedin" area-hidden="true"></i></span>
@@ -119,8 +115,8 @@
             <h5>Genpact</h5>
           </div>
           <div class="text">
-            <h4>Digital Analytics</h4>
-            <p>Analyze and identify gaps in functional/business requirements and communicate effectively with both Business and Functional analysts on the same. Built multiple projects, Ad-hoc requests and dashboards in Adobe workspace and Report Builder. Resolve JIRA Tickets on the implementation queries (Agile Tool).</p>
+            <h4>Digital Analytics / Assistant Manager</h4>
+            <p>Analyze and identify gaps in functional/business requirements and communicate effectively with both Business and Functional analysts on the same. Built multiple projects, Ad-hoc requests and dashboards in Adobe workspace and Report Builder. In-depth knowledge on BRD and SDR docs. Hands on knowledge on Adobe Launch - Create Data Elements, Create Rule, Publish "New Library" from Development to production, Add embed codes to sites, in staging and production server. Resolve JIRA Tickets on the implementation queries (Agile Tool).</p>
           </div>
         </div>
         <div class="box">
@@ -151,49 +147,49 @@
         <div class="box">
           <h4>Analytics</h4>
           <div class="percent">
-            <div style="width: 90%;"></div>
+            <div style="width: 100%;"></div>
           </div>
         </div>
         <div class="box">
           <h4>Adobe workspace</h4>
           <div class="percent">
-            <div style="width: 90%;"></div>
+            <div style="width: 95%;"></div>
           </div>
         </div>
         <div class="box">
           <h4>Adobe Reporting</h4>
           <div class="percent">
-            <div style="width: 90%;"></div>
+            <div style="width: 95%;"></div>
           </div>
         </div>
         <div class="box">
           <h4>Tag Management</h4>
           <div class="percent">
-            <div style="width: 85%;"></div>
+            <div style="width: 80%;"></div>
           </div>
         </div>
         <div class="box">
           <h4>Adobe Experience Debugger</h4>
           <div class="percent">
-            <div style="width: 80%;"></div>
+            <div style="width: 90%;"></div>
           </div>
         </div>
         <div class="box">
           <h4>HTML5</h4>
           <div class="percent">
-            <div style="width: 60%;"></div>
+            <div style="width: 75%;"></div>
           </div>
         </div>
         <div class="box">
           <h4>CSS3</h4>
           <div class="percent">
-            <div style="width: 55%;"></div>
+            <div style="width: 70%;"></div>
           </div>
         </div>
         <div class="box">
           <h4>Javascript</h4>
           <div class="percent">
-            <div style="width: 55%;"></div>
+            <div style="width: 70%;"></div>
           </div>
         </div>
       </div>
