--- a/srivani/index.html
+++ b/srivani/index.html
@@ -43,7 +43,7 @@
           </li>
           <li>
             <span class="icon"><i class="fa fa-map-marker" area-hidden="true"></i></span>
-            <span class="text">Bengaluru</span>
+            <span class="text">Singapore</span>
           </li>
         </ul>
       </div>
