--- a/srivani/index.html
+++ b/srivani/index.html
@@ -21,7 +21,7 @@
         <div class="imgBx">
           <img src="circle-cropped.png" alt="picture">
         </div>
-        <h2>Srivani C <br><span>Digital Analyst</span></h2>
+        <h2>Srivani C <br><span>Digital Data Analyst</span></h2>
       </div>
 
       <div class="contactInfo">
@@ -29,7 +29,7 @@
         <ul>
           <li>
             <span class="icon"> <i class="fa fa-phone" area-hidden="true"></i> </span>
-            <span class="text">+91 9972343014</span>
+            <span class="text">+65 81950814</span>
           </li>
           <li>
             <span class="icon"><i class="fa fa-envelope-o" area-hidden="true"></i></span>
@@ -100,15 +100,39 @@
         </ul>
       </div>
 
+      <div class="contactInfo education">
+        <h3 class="title">Highlights</h3>
+        <ul>
+        
+        <h5>Promoted in every organization within short duration.</h5> 
+        <h5>Received multiple awards(YAR, R&R, Employee of the month etc.) </h5>
+        <h5>Quick learner, Ownership, Commitment will be noticed in my work style.</h5>
+        <h5>Can join within 1 month notice period.</h5>
+          
+        </ul>
+      </div>
+
+
+
     </div>
 
     <div class="right-side">
       <div class="about">
         <h2 class="title2">Profile</h2>
-        <p>Overall 6+ years of industry experience and 2 years of analytics experience. Skilled at a wide range of reporting, analytics and tag management. Have vertical expertise on lead gen, health care, E-commerce, hospitality websites.</p>
+        <p>Overall 7.5 years of industry experience and 4 years of analytics experience. Skilled at a wide range of reporting, analytics, monitoring and tag management. Worked on websites like Networking, lead gen, health care, E-commerce, hospitality. Monitoring and error log analysis using tools Dynatrace, SPLUNK and Kibana</p>
       </div>
       <div class="about">
         <h2 class="title2">Experience</h2>
+        <div class="box">
+          <div class="year_company">
+            <h5>Sep 2021 - Present </h5>
+            <h5>InnoWave</h5>
+          </div>
+          <div class="text">
+            <h4>Lead Digital Data Analyst</h4>
+            <p>Adobe data analysis and debugging error occurrences within website. Creating Dashboards in Adobe workspace as per Ad-hoc requests. Monitor and Report error data using Dynatrace and SPLUNK. Analyze the error logs in Dynatrace and SPLUNK.</p>    
+          </div>
+        </div>
         <div class="box">
           <div class="year_company">
             <h5>Dec 2018 - Aug 2019 </h5>
@@ -116,7 +140,7 @@
           </div>
           <div class="text">
             <h4>Digital Analytics / Assistant Manager</h4>
-            <p>Analyze and identify gaps in functional/business requirements and communicate effectively with both Business and Functional analysts on the same. Built multiple projects, Ad-hoc requests and dashboards in Adobe workspace and Report Builder. In-depth knowledge on BRD and SDR docs. Hands on knowledge on Adobe Launch - Create Data Elements, Create Rule, Publish "New Library" from Development to production, Add embed codes to sites, in staging and production server. Resolve JIRA Tickets on the implementation queries (Agile Tool).</p>
+            <p> Analyze and identify gaps in functional/business requirements and communicate effectively with both Business and Functional analysts on the same. Built multiple projects, Ad-hoc requests and dashboards in Adobe workspace and Report Builder. In-depth knowledge on BRD and SDR docs. Hands on knowledge on Adobe Launch - Create Data Elements, Create Rule, Publish "New Library" from Development to production, Add embed codes to sites, in staging and production server. Resolve JIRA Tickets on the implementation queries (Agile Tool).</p>
           </div>
         </div>
         <div class="box">
@@ -126,7 +150,7 @@
           </div>
           <div class="text">
             <h4>Analytics / Process Lead</h4>
-            <p>Use report builder to automate reports and excel dashboards. Device, Product, Operating System Classification etc. Help stakeholders / product teams to leverage Adobe analytics data to make business decisions by providing equitable insights</p>
+            <p>Creating Daily, Weekly, Monthly, ad-hoc reports. Share the report to stakeholders and management with valuable insights for abnormal data and hypothesis if needed. Classify Device, Product, Operating System etc and import it to Adobe tool. Help stakeholders / product teams to leverage Adobe analytics data to make business decisions by providing equitable insights</p>
           </div>
         </div>
         <div class="box">
@@ -163,7 +187,7 @@
           </div>
         </div>
         <div class="box">
-          <h4>Tag Management</h4>
+          <h4>Adobe Launch</h4>
           <div class="percent">
             <div style="width: 80%;"></div>
           </div>
@@ -207,18 +231,22 @@
 
       <div class="about interests">
         <h2 class="title2">Preferred Job Locations</h2>
-        <p>Singapore, Bengaluru</p>
+        <p>Singapore</p>
       </div>
 
       <div class="about interests">
         <h2 class="title2">Interest</h2>
         <ul>
-          <li><i class="fa fa-gamepad" area-hidden="true"></i> Web Dev </li>
+          <li><i class="fa fa-gamepad" area-hidden="true"></i> Junior Web Dev </li>
           <li><i class="fa fa-tags" area-hidden="true"></i> Adobe Launch </li>
           <li><i class="fa fa-line-chart" area-hidden="true"></i> Adobe Analytics</li>
           <li><i class="fa fa-book" area-hidden="true"></i> Tech</li>
+          <li><i class="fa fa-line-chart" area-hidden="true"></i> Tableau</li>
+          <li><i class="fa fa-line-chart" area-hidden="true"></i> Dynatrace </li>
         </ul>
       </div>
+
+
     </div>
   </div>
 </body>
